# service-management

./: .gitignore  README.adoc  arch-purge-pacman-cache.yaml  arch-up-to-date.yaml  hosts.ini  resolv.conf  set-dns.yaml  snapshot.yaml
ai/: accounts-chat.toml  bootstrap-kosmos.yaml  chat.py  comfyui.yaml  credentials-chat.toml  dating-sim.py  diffusion-models.yaml  llama.cpp-apikey.conf  llama.yaml  llm-models.yaml  llm.yaml
aria2/: httpd-vhost-aria2.conf  setup.yaml
backup/: backup-adenine.timer  backup-adenine.yaml  backup.service  setup.yaml  xeno.toml
backup/runner/: CMakeLists.txt
backup/runner/src/: main.cpp  runner.cpp  runner.hpp
blocky/: blocky.service  config.yml  disable-blocking.yaml  init-db.yaml  setup.yaml  tasks-update-config.yaml  update-config.yaml
breed-web/: breed-web.toml  setup.yaml
clawdbot/: clawdbot.service  clawdbot.sysusers  config.json  setup.yaml
diary/: apache.conf  config.yaml  override.conf  setup.yaml
docspell/: httpd.conf  joex.conf  restserver.conf  setup.yaml
dol-server/: config.yaml  dol-server.service  setup.yaml  sysusers-dol-server.conf
git/: README.md  backend-wrapper.sh  baregit.ini  cgit-wrapper.sh  cgitrc  gitolite.rc  httpd.conf  setup.yaml
homepage/: setup.yaml
httpd-obrona/: caddyfile  setup.yaml
huginn/: docker.huginn.service  httpd-vhost-huginn.conf  huginn.env  init-db.yaml  remove-db.yaml  setup.yaml
keycloak/: env.conf  httpd.conf  keycloak.conf  setup.yaml
mastodon/: Dockerfile  README.adoc  docker.mastodon.service  entrypoint.sh  env.production  init-db.yaml  remove-db.yaml  setup.yaml
(+222 files in other folders)
